// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cluster creation control data for Hypershift generates correctly 1`] = `
[
  {
    "id": "hypershiftDetailStep",
    "title": "Cluster details",
    "type": "step",
  },
  {
    "active": "Host inventory",
    "id": "infrastructure",
    "name": "Infrastructure",
    "type": "reviewinfo",
  },
  {
    "active": "Hosted",
    "id": "controlplane",
    "name": "Control plane type",
    "type": "reviewinfo",
  },
  {
    "available": [],
    "footer": <CreateCredentialModal
      handleModalToggle={[MockFunction]}
    />,
    "id": "connection",
    "name": "Infrastructure provider credential",
    "placeholder": "Select a credential",
    "providerId": "hostinventory",
    "tooltip": "The settings that are required for the selected provider. You can select an existing credential, or add new credentials. These credentials contain values such as pull secret or cloud credentials. The selected credential cannot be changed after creation.",
    "type": "singleselect",
    "validation": {
      "notification": "Select a connection",
      "required": false,
    },
  },
  {
    "additionalProps": {
      "promptSshPublicKey": false,
    },
    "component": <DetailsForm />,
    "encodeValues": [
      "pullSecret",
    ],
    "id": "hypershift",
    "mustValidate": true,
    "providerId": "hypershift",
    "type": "custom",
  },
  {
    "disabled": true,
    "id": "hypershiftHostsStep",
    "title": "Node pools",
    "type": "step",
  },
  {
    "component": <HostsForm />,
    "id": "hypershift-hosts",
    "mustValidate": true,
    "providerId": "hypershift",
    "type": "custom",
  },
  {
    "disabled": true,
    "id": "hyperhisftNetworkStep",
    "title": "Networking",
    "type": "step",
  },
  {
    "component": <NetworkForm />,
    "id": "hypershift-network",
    "mustValidate": true,
    "providerId": "hypershift",
    "type": "custom",
  },
  {
    "active": true,
    "id": "includeKlusterletAddonConfig",
    "type": "hidden",
  },
  {
    "component": <Warning />,
    "id": "warning",
    "type": "custom",
  },
  {
    "id": "automationStep",
    "title": "Automation",
    "type": "step",
  },
  {
    "id": "chooseTemplate",
    "info": "Optional: Choose an automation template to run Ansible jobs at different stages of the cluster lifecycle.",
    "type": "title",
  },
  {
    "component": <AutomationProviderHint
      className="creation-view-controls-hint"
      component="hint"
    />,
    "id": "automationProviderHint",
    "type": "custom",
  },
  {
    "id": "templateName",
    "name": "Automation template",
    "onSelect": [Function],
    "placeholder": "Select an automation template",
    "prompts": {
      "icon": <ExternalLinkAltIcon />,
      "id": "add-automation-template",
      "positionBottomRight": true,
      "prompt": "Add automation template",
      "type": "link",
      "url": "/multicloud/infrastructure/automations/add",
    },
    "tooltip": "Only templates with valid Ansible Automation Platform credentials are listed.",
    "type": "singleselect",
    "validation": {
      "required": false,
    },
  },
  {
    "component": <TemplateLinkOutControl />,
    "id": "curatorLinkOut",
    "type": "custom",
  },
  {
    "component": <TemplateSummaryControl />,
    "id": "curatorSummary",
    "type": "custom",
  },
  {
    "active": "",
    "id": "clusterCuratorSpec",
    "reverse": [Function],
    "type": "hidden",
  },
  {
    "active": [],
    "hidden": true,
    "id": "supportedCurations",
    "type": "values",
  },
  {
    "active": "",
    "id": "toweraccess-install",
    "type": "hidden",
  },
  {
    "active": "",
    "id": "toweraccess-upgrade",
    "type": "hidden",
  },
  {
    "active": "",
    "id": "toweraccess-scale",
    "type": "hidden",
  },
  {
    "active": "",
    "id": "toweraccess-destroy",
    "type": "hidden",
  },
  {
    "active": "",
    "id": "reconcilePause",
    "type": "hidden",
  },
]
`;

exports[`Cluster creation control data for Hypershift generates correctly for MCE 1`] = `
[
  {
    "id": "hypershiftDetailStep",
    "title": "Cluster details",
    "type": "step",
  },
  {
    "active": "Host inventory",
    "id": "infrastructure",
    "name": "Infrastructure",
    "type": "reviewinfo",
  },
  {
    "active": "Hosted",
    "id": "controlplane",
    "name": "Control plane type",
    "type": "reviewinfo",
  },
  {
    "available": [],
    "footer": <CreateCredentialModal
      handleModalToggle={[MockFunction]}
    />,
    "id": "connection",
    "name": "Infrastructure provider credential",
    "placeholder": "Select a credential",
    "providerId": "hostinventory",
    "tooltip": "The settings that are required for the selected provider. You can select an existing credential, or add new credentials. These credentials contain values such as pull secret or cloud credentials. The selected credential cannot be changed after creation.",
    "type": "singleselect",
    "validation": {
      "notification": "Select a connection",
      "required": false,
    },
  },
  {
    "additionalProps": {
      "promptSshPublicKey": false,
    },
    "component": <DetailsForm />,
    "encodeValues": [
      "pullSecret",
    ],
    "id": "hypershift",
    "mustValidate": true,
    "providerId": "hypershift",
    "type": "custom",
  },
  {
    "disabled": true,
    "id": "hypershiftHostsStep",
    "title": "Node pools",
    "type": "step",
  },
  {
    "component": <HostsForm />,
    "id": "hypershift-hosts",
    "mustValidate": true,
    "providerId": "hypershift",
    "type": "custom",
  },
  {
    "disabled": true,
    "id": "hyperhisftNetworkStep",
    "title": "Networking",
    "type": "step",
  },
  {
    "component": <NetworkForm />,
    "id": "hypershift-network",
    "mustValidate": true,
    "providerId": "hypershift",
    "type": "custom",
  },
  {
    "active": false,
    "id": "includeKlusterletAddonConfig",
    "type": "hidden",
  },
  {
    "component": <Warning />,
    "id": "warning",
    "type": "custom",
  },
  {
    "id": "automationStep",
    "title": "Automation",
    "type": "step",
  },
  {
    "id": "chooseTemplate",
    "info": "Optional: Choose an automation template to run Ansible jobs at different stages of the cluster lifecycle.",
    "type": "title",
  },
  {
    "component": <AutomationProviderHint
      className="creation-view-controls-hint"
      component="hint"
    />,
    "id": "automationProviderHint",
    "type": "custom",
  },
  {
    "id": "templateName",
    "name": "Automation template",
    "onSelect": [Function],
    "placeholder": "Select an automation template",
    "prompts": {
      "icon": <ExternalLinkAltIcon />,
      "id": "add-automation-template",
      "positionBottomRight": true,
      "prompt": "Add automation template",
      "type": "link",
      "url": "/multicloud/infrastructure/automations/add",
    },
    "tooltip": "Only templates with valid Ansible Automation Platform credentials are listed.",
    "type": "singleselect",
    "validation": {
      "required": false,
    },
  },
  {
    "component": <TemplateLinkOutControl />,
    "id": "curatorLinkOut",
    "type": "custom",
  },
  {
    "component": <TemplateSummaryControl />,
    "id": "curatorSummary",
    "type": "custom",
  },
  {
    "active": "",
    "id": "clusterCuratorSpec",
    "reverse": [Function],
    "type": "hidden",
  },
  {
    "active": [],
    "hidden": true,
    "id": "supportedCurations",
    "type": "values",
  },
  {
    "active": "",
    "id": "toweraccess-install",
    "type": "hidden",
  },
  {
    "active": "",
    "id": "toweraccess-upgrade",
    "type": "hidden",
  },
  {
    "active": "",
    "id": "toweraccess-scale",
    "type": "hidden",
  },
  {
    "active": "",
    "id": "toweraccess-destroy",
    "type": "hidden",
  },
  {
    "active": "",
    "id": "reconcilePause",
    "type": "hidden",
  },
]
`;
